# Bucky-Bank

./: .gitignore  README.md
PPT/: BuckyBank-PPT_rzexin.html  BuckyBank-PPT_v1.0.html  BuckyBank-PPT_v1.1.html
backend/: Cargo.toml
backend/src/: database.rs  handlers.rs  main.rs  models.rs
contract/bucky_bank/: Move.toml  README.md
contract/bucky_bank/sources/: bucky_bank.move
frontend/: README.md  bucky-bank-contract.json  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx
frontend/src/components/: BuckyBankList.tsx  ChildPiggyBank.tsx  ParentDashboard.tsx  PiggyBank.tsx  WithdrawalApprovalPanel.tsx  WithdrawalButton.tsx  WithdrawalConfirmationPanel.tsx  WithdrawalDebug.tsx  WithdrawalRequestsList.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useGetBuckyBank.ts
frontend/src/hooks/buckethooks/: useGetSuiPrice.ts  useGetUserSavings.ts
frontend/src/lib/: api.ts  bucketClient.ts
frontend/src/mutations/: approve_withdrawal.ts  claim_saving_rewards.ts  create_bucky_bank.ts  deposit.ts  request_withdrawal.ts  withdraw.ts
frontend/src/providers/: NetworkConfig.ts  SuiDappProvider.tsx
frontend/src/types/: index.ts
indexer/: Cargo.toml  README.md  config.example.toml
indexer/src/: config.rs  database.rs  handlers.rs  health.rs  indexer.rs  main.rs
migrations/: 000_tables.sql  001_deposit_made_table.sql  002_withdrawal_requests.sql  003_withdrawed_table.sql  20250914014345_tables.sql
notes/: 2025.09.17.md
v1/: README.md
v1/bucket_sdk_demo/: package.json  pnpm-lock.yaml  tsconfig.json
v1/bucket_sdk_demo/src/: 01_usdc_2_buck.ts  02_buck_2_sbuck.ts  03_stake_sbuck.ts  04_claim_sbuck.ts
(+7 files in other folders)
