[package]
name = "bucky_bank_indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main_simple"
path = "src/main_simple.rs"

[[bin]]
name = "bucky_bank_indexer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
